--- a/assessment.html
+++ b/assessment.html
@@ -1,11 +1,115 @@
-<<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Pamela's HTML Assmt</title>
   </head>
   <body>
+    <h2>TEXT</h2>
+      <p><strong>Lorem </strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque id diam vel quam elementum pulvinar etiam non. Facilisi nullam vehicula ipsum a arcu cursus vitae congue. Bibendum neque egestas congue quisque egestas diam in. Diam volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Vitae semper quis lectus nulla at volutpat diam. Urna porttitor rhoncus dolor purus non. Vitae nunc sed velit dignissim. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Nascetur ridiculus mus mauris vitae ultricies.</p>
+      <blockquote><p><strong>Integer</strong> Quis risus sed vulputate odio ut enim blandit volutpat. Turpis tincidunt id aliquet risus feugiat in. Sed augue lacus viverra vitae congue eu. Sagittis vitae et leo duis. Enim eu turpis egestas pretium aenean. Dictumst vestibulum rhoncus est pellentesque. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Nibh venenatis cras sed felis. Nec feugiat in fermentum posuere urna nec. Convallis a cras semper auctor neque. Et netus et malesuada fames ac turpis.</p></blockquote>
+      <p><strong>Vestibulum</strong> Magna etiam tempor orci eu lobortis. Nibh praesent tristique magna sit amet purus gravida. Velit ut tortor pretium viverra suspendisse. Quis hendrerit dolor magna eget est lorem ipsum dolor. Eget dolor morbi non arcu risus quis varius quam quisque. Dui ut ornare lectus sit amet est. Nam at lectus urna duis convallis convallis tellus id. Eleifend quam adipiscing vitae proin. Tristique risus nec feugiat in fermentum posuere. Mauris rhoncus aenean vel elit scelerisque. Sodales ut etiam sit amet nisl purus. Justo donec enim diam vulputate. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Mattis enim ut tellus elementum sagittis.</p>
 
+    <h2>TABLE</h2>
+      <table>
+        <caption>
+        <thead>
+          <tr>
+            <th rowspan="2">Team Name</th>
+            <th colspan="2">First Half</th>
+            <th colspan="2">Second Half</th>
+          </tr>
+        </thead>
+      ><tbody>
+        <tr>
+          <th></th>
+          <th>Q1</th>
+          <th>Q2</th>
+          <th>Q3</th>
+          <th>Q4</th>
+          <th>Final</th>
+        </tr>
+        <tr>
+          <td>Denver</td>
+            <th>2</th>
+            <th>5</th>
+            <th>6</th>
+            <th>10</th>
+            <th><em>23</em></th>
+        </tr>
+        <tr>
+          <td>Patriots</td>
+            <th>4</th>
+            <th>5</th>
+            <th>7</th>
+            <th>3</th>
+            <th><em>19</em></th>
+        </tr>
+        <tfoot>
+          <td><em>Total</em></td>
+          <td>6</td>
+          <td>10</td>
+          <td>13</td>
+          <td>13</td>
+          <td>42</td>
+        </tfoot>
+
+          </tbody>
+        </caption>
+      </table>
+
+    <h2>LIST</h2>
+    <ul>
+     <li><img src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/den.png"></img></li>
+     <a href="https://www.denverbroncos.com/" target="_blank">Denver Broncos</a>
+     <li>Coach: Nathaniel Hackett</li>
+     <li>QuaterBack Players</li>
+        <ol>1. Russell Wilson</ol>
+        <ol>2. Brett Rypien</ol>
+        <ol>3. Peyton Manning</ol>
+    </ul>
+    <ul>
+     <li><img src="https://a.espncdn.com/i/teamlogos/nfl/500/ne.png"></img></li>
+     <a href="https://www.patriots.com/" target="_blank">New England Patriots</a>
+     <li>Coach: Bill Belichick</li>
+     <li>QuaterBack Players</li>
+        <ol>1. Marc Jones</ol>
+        <ol>2. Bailey Zappe</ol>
+        <ol>3. Tom Brady</ol>
+    </ul>
+
+  <h2>FORM</h2>
+  <input type="text" name="" value="First Name"> <input type="text" name="" value="Last Name"><br>
+  Favorite Sport: <select name="menu drop down">
+    <option>FootBall</option>
+    <option>Soccer</option>
+    <option>Baseball</option>
+    <option>Basketball</option>
+  </select>
+
+  <br>
+
+  I have <input type="checkbox" name="played"><label>Played</label>
   </body>
+  <input type="checkbox" name="played"><label>Attended</label>
+  </body>
+  <input type="checkbox" name="played"><label>Coached</label>
+  </body>
+  <input type="checkbox" name="played"><label>Bet</label>
+</body>on this sport!
+
+<br>
+
+For this sport I prefer the: <input type="radio" name="prefer"><label>Amateur</label>
+</body>
+<input type="radio" name="prefer"><label>College</label>
+</body>
+<input type="radio" name="prefer"><label>Professional</label>
+</body>
+
+<br>
+<br>
+
+<input type="submit" name="submit button" value="Click to Submit">
+
 </html>
